--- a/pages/detalles.html
+++ b/pages/detalles.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="CSS/Style.css">
+    <link rel="stylesheet" href="CSS/Style.css" />
     <!-- CSS only -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
@@ -16,7 +16,62 @@
   </head>
   <body>
     <nav></nav>
-    <main></main>
+    <main>
+      <section></section>
+      <section>
+        <div class="container border">
+          <h1 class="text-center">Cyndaquil N.º155</h1>
+          <article class="row">
+            <aside class="col-12 col-lg-5">
+              <img
+                class="w-100"
+                src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/155.png"
+                alt=""
+              />
+            </aside>
+            <aside class="col-12 col-lg-7 my-5">
+              <p>
+                Cyndaquil se protege soltando llamas por el lomo. Cuando está
+                enfadado, las llamas son fieras, pero, si está cansado, solo
+                consigue echar algunas chispas que no llegan a cuajar en una
+                completa combustión.
+              </p>
+              <div class="card bg-primary text-light">
+                <div class="card-header">
+                  <h5 class="card-title">Version</h5>
+                </div>
+                <div class="card-body row ">
+                  <aside class="col-12 col-md-6">
+                    <p>Altura<br>0,5m</p>
+                  </aside>
+                  <aside class="col-12 col-md-6">
+                    <p>Categoria<br>Raton fuego</span></p>
+                  </aside>
+                  <aside class="col-12 col-md-6">
+                    <p>Peso<br>7,9 kg</p>
+                  </aside>
+                  <aside class="col-12 col-md-6">
+                    <p>Habilidad<br>Mar llamas</p>
+                  </aside>
+                  <aside class="col-12 col-md-6">
+                    <p>	&#9794 	&#9792</p>
+                  </aside>
+                </div>
+              </div>
+              <article>
+                <h5>Tipo</h5>
+                <p class="badge rounded-pill bg-danger">Fuego</p>
+                <h5>Debilidad</h5>
+                <p class="badge rounded-pill bg-info">Agua</p>
+                <p class="badge rounded-pill bg-secondary">Tierra</p>
+                <p class="badge rounded-pill bg-dark">Roca</p>
+
+              </article>
+            </aside>
+          </article>
+        </div>
+      </section>
+    </main>
     <footer></footer>
     <!-- JavaScript Bundle with Popper -->
     <script
