agregue las evoluciones

--- a/pages/detalles.html
+++ b/pages/detalles.html
@@ -17,7 +17,6 @@
   <body>
     <nav></nav>
     <main>
-      <section></section>
       <section>
         <div class="container border">
           <h1 class="text-center">Cyndaquil N.º155</h1>
@@ -58,15 +57,26 @@
                   </aside>
                 </div>
               </div>
-              <article>
+              <div>
                 <h5>Tipo</h5>
                 <p class="badge rounded-pill bg-danger">Fuego</p>
                 <h5>Debilidad</h5>
                 <p class="badge rounded-pill bg-info">Agua</p>
                 <p class="badge rounded-pill bg-secondary">Tierra</p>
                 <p class="badge rounded-pill bg-dark">Roca</p>
-
-              </article>
+              </div>
+            </aside>
+          </article>
+          <article class="bg-secondary">
+            <h4>Evoluciones</h4>
+            <aside>
+              <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/155.png" alt="">
+            </aside>
+            <aside>
+              <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/156.png" alt="">
+            </aside>
+            <aside>
+              <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/157.png" alt="">
             </aside>
           </article>
         </div>
