Hice responsive las img de las evoluciones

--- a/pages/detalles.html
+++ b/pages/detalles.html
@@ -70,13 +70,13 @@
           <article class="bg-secondary">
             <h4>Evoluciones</h4>
             <aside>
-              <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/155.png" alt="">
+              <img class="col-12 col-lg-4" src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/155.png" alt="">
             </aside>
             <aside>
-              <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/156.png" alt="">
+              <img class="col-12 col-lg-4" src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/156.png" alt="">
             </aside>
             <aside>
-              <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/157.png" alt="">
+              <img class="col-12 col-lg-4" src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/157.png" alt="">
             </aside>
           </article>
         </div>
