agregamos las cards de pokemon

--- a/index.html
+++ b/index.html
@@ -41,6 +41,72 @@
               <span class="sr-only">Next</span>
             </a>
           </div>
+  <section class="container-fluid row">
+    <div class="card col-sm-12 col-md-6 col-lg-2  m-3" >
+        <img src="img/Bulbasaur.png" class="card-img-top" alt="Bulbasaur">
+        <div class="card-body">
+          <p class="card-title">#001</p>
+          <h3 class="card-text">Bulbasaur.</h3>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+    <div class="card col-sm-12 col-md-6 col-lg-2  m-3" >
+        <img src="img/Bulbasaur.png" class="card-img-top" alt="Bulbasaur">
+        <div class="card-body">
+          <p class="card-title">#001</p>
+          <h3 class="card-text">Bulbasaur.</h3>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+    <div class="card col-sm-12 col-md-6 col-lg-2 m-3" >
+        <img src="img/Bulbasaur.png" class="card-img-top" alt="Bulbasaur">
+        <div class="card-body">
+          <p class="card-title">#001</p>
+          <h3 class="card-text">Bulbasaur.</h3>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+    <div class="card col-sm-12 col-md-6 col-lg-2 m-3" >
+        <img src="img/Bulbasaur.png" class="card-img-top" alt="Bulbasaur">
+        <div class="card-body">
+          <p class="card-title">#001</p>
+          <h3 class="card-text">Bulbasaur.</h3>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+    <div class="card col-sm-12 col-md-6 col-lg-2 m-3" >
+        <img src="img/Bulbasaur.png" class="card-img-top" alt="Bulbasaur">
+        <div class="card-body">
+          <p class="card-title">#001</p>
+          <h3 class="card-text">Bulbasaur.</h3>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+    <div class="card col-sm-12 col-md-6 col-lg-2 m-3" >
+        <img src="img/Bulbasaur.png" class="card-img-top" alt="Bulbasaur">
+        <div class="card-body">
+          <p class="card-title">#001</p>
+          <h3 class="card-text">Bulbasaur.</h3>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+    <div class="card col-sm-12 col-md-6 col-lg-2 m-3" >
+        <img src="img/Bulbasaur.png" class="card-img-top" alt="Bulbasaur">
+        <div class="card-body">
+          <p class="card-title">#001</p>
+          <h3 class="card-text">Bulbasaur.</h3>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+    <div class="card col-sm-12 col-md-6 col-lg-2 m-3" >
+        <img src="img/Bulbasaur.png" class="card-img-top" alt="Bulbasaur">
+        <div class="card-body">
+          <p class="card-title">#001</p>
+          <h3 class="card-text">Bulbasaur.</h3>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+  </section>        
     </main>
     <footer class="container-fluid bg-dark">
 <div class="text-light text-center p-4">
