Retoques en las evoluciones

--- a/pages/detalles.html
+++ b/pages/detalles.html
@@ -69,15 +69,17 @@
           </article>
           <article class="bg-secondary">
             <h4>Evoluciones</h4>
-            <aside>
-              <img class="col-12 col-lg-4" src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/155.png" alt="">
+            <div class="row">
+            <aside class="col-12 col-lg-4">
+              <img class="w-100 " src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/155.png" alt="">
             </aside>
-            <aside>
-              <img class="col-12 col-lg-4" src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/156.png" alt="">
+            <aside class="col-12 col-lg-4">
+              <img class="w-100" src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/156.png" alt="">
             </aside>
-            <aside>
-              <img class="col-12 col-lg-4" src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/157.png" alt="">
+            <aside class="col-12 col-lg-4">
+              <img class="w-100" src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/157.png" alt="">
             </aside>
+            </div>
           </article>
         </div>
       </section>
