--- a/index.html
+++ b/index.html
@@ -84,7 +84,11 @@
       </nav>
     </nav>
     <main></main>
-    <footer></footer>
+    <footer>
+      <div class="footer">
+        <p>&copy; 2021 Todos los derechos reservados</p>
+      </div>
+    </footer>
     <!-- JavaScript Bundle with Popper -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
