cambiamos el title

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="CSS/Style.css">
-    <title>Pokemon</title>
+    <title>Pokemones</title>
   </head>
   <body>
-    <nav>
+    <nav> 
        
     </nav>
     <main>
