agregamos fotos de los pokemones con sus respectivas descripciones

--- a/index.html
+++ b/index.html
@@ -41,61 +41,61 @@
               <span class="sr-only">Next</span>
             </a>
           </div>
-  <section class="container-fluid row">
+  <section class="container-fluid row d-flex justify-content-center">
     <div class="card col-sm-12 col-md-6 col-lg-3  m-5" >
         <img src="img/Bulbasaur.png" class="card-img-top" alt="Bulbasaur">
         <div class="card-body">
           <p class="card-title">#001</p>
-          <h3 class="card-text">Bulbasaur.</h3>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <h3 class="card-text">Bulbasaur</h3>
+          <a href="pages/detalles.html" class="btn btn-success">Planta</a>
         </div>
       </div>
     <div class="card col-sm-12 col-md-6 col-lg-3  m-5" >
-        <img src="img/Bulbasaur.png" class="card-img-top" alt="Bulbasaur">
+        <img src="img/Charmander.png" class="card-img-top" alt="Charmander">
         <div class="card-body">
-          <p class="card-title">#001</p>
-          <h3 class="card-text">Bulbasaur.</h3>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <p class="card-title">#002</p>
+          <h3 class="card-text">Charmander</h3>
+          <a href="#" class="btn btn-danger">Fuego</a>
         </div>
       </div>
     <div class="card col-sm-12 col-md-6 col-lg-3 m-5" >
-        <img src="img/Bulbasaur.png" class="card-img-top" alt="Bulbasaur">
+        <img src="img/Machamps.png" class="card-img-top" alt="machamps">
         <div class="card-body">
-          <p class="card-title">#001</p>
-          <h3 class="card-text">Bulbasaur.</h3>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <p class="card-title">#003</p>
+          <h3 class="card-text">Machamps</h3>
+          <a href="#" class="btn btn-dark">Lucha</a>
         </div>
       </div>
     <div class="card col-sm-12 col-md-6 col-lg-3 m-5" >
-        <img src="img/Bulbasaur.png" class="card-img-top" alt="Bulbasaur">
+        <img src="img/Pikachu.png" class="card-img-top" alt="Pikachu">
         <div class="card-body">
-          <p class="card-title">#001</p>
-          <h3 class="card-text">Bulbasaur.</h3>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <p class="card-title">#004</p>
+          <h3 class="card-text">Pikachu</h3>
+          <a href="#" class="btn btn-warning">Electrico</a>
         </div>
     </div>
     <div class="card col-sm-12 col-md-6 col-lg-3 m-5" >
-        <img src="img/Bulbasaur.png" class="card-img-top" alt="Bulbasaur">
+        <img src="img/Rayquaza.png" class="card-img-top" alt="Rayquaza">
         <div class="card-body">
-          <p class="card-title">#001</p>
-          <h3 class="card-text">Bulbasaur.</h3>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <p class="card-title">#005</p>
+          <h3 class="card-text">Rayquaza</h3>
+          <a href="#" class="btn btn-dark">Lucha</a>
         </div>
       </div>
     <div class="card col-sm-12 col-md-6 col-lg-3 m-5" >
-        <img src="img/Bulbasaur.png" class="card-img-top" alt="Bulbasaur">
+        <img src="img/Rhyhorn.png" class="card-img-top" alt="rhyron">
         <div class="card-body">
-          <p class="card-title">#001</p>
-          <h3 class="card-text">Bulbasaur.</h3>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <p class="card-title">#006</p>
+          <h3 class="card-text">Rhyhorn</h3>
+          <a href="#" class="btn btn-secondary">Piedra</a>
         </div>
       </div>
     <div class="card col-sm-12 col-md-6 col-lg-3 m-3" >
-        <img src="img/Bulbasaur.png" class="card-img-top" alt="Bulbasaur">
+        <img src="img/Squirtle.png" class="card-img-top" alt="squirtle">
         <div class="card-body">
-          <p class="card-title">#001</p>
-          <h3 class="card-text">Bulbasaur.</h3>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <p class="card-title">#007</p>
+          <h3 class="card-text">Squirtle</h3>
+          <a href="#" class="btn btn-primary">Agua</a>
         </div>
       </div>
   </section>        
