agregamos el link en las anclas para redireccionar el pokemon a pagina de detalle

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="card-body">
           <p class="card-title">#002</p>
           <h3 class="card-text">Charmander</h3>
-          <a href="#" class="btn btn-danger">Fuego</a>
+          <a href="pages/detalles.html" class="btn btn-danger">Fuego</a>
         </div>
       </div>
     <div class="card col-sm-12 col-md-6 col-lg-3 m-5" >
@@ -63,7 +63,7 @@
         <div class="card-body">
           <p class="card-title">#003</p>
           <h3 class="card-text">Machamps</h3>
-          <a href="#" class="btn btn-dark">Lucha</a>
+          <a href="pages/detalles.html" class="btn btn-dark">Lucha</a>
         </div>
       </div>
     <div class="card col-sm-12 col-md-6 col-lg-3 m-5" >
@@ -71,7 +71,7 @@
         <div class="card-body">
           <p class="card-title">#004</p>
           <h3 class="card-text">Pikachu</h3>
-          <a href="#" class="btn btn-warning">Electrico</a>
+          <a href="pages/detalles.html" class="btn btn-warning">Electrico</a>
         </div>
     </div>
     <div class="card col-sm-12 col-md-6 col-lg-3 m-5" >
@@ -79,7 +79,7 @@
         <div class="card-body">
           <p class="card-title">#005</p>
           <h3 class="card-text">Rayquaza</h3>
-          <a href="#" class="btn btn-dark">Lucha</a>
+          <a href="pages/detalles.html" class="btn btn-dark">Lucha</a>
         </div>
       </div>
     <div class="card col-sm-12 col-md-6 col-lg-3 m-5" >
@@ -87,7 +87,7 @@
         <div class="card-body">
           <p class="card-title">#006</p>
           <h3 class="card-text">Rhyhorn</h3>
-          <a href="#" class="btn btn-secondary">Piedra</a>
+          <a href="pages/detalles.html" class="btn btn-secondary">Piedra</a>
         </div>
       </div>
     <div class="card col-sm-12 col-md-6 col-lg-3 m-3" >
@@ -95,7 +95,7 @@
         <div class="card-body">
           <p class="card-title">#007</p>
           <h3 class="card-text">Squirtle</h3>
-          <a href="#" class="btn btn-primary">Agua</a>
+          <a href="pages/detalles.html" class="btn btn-primary">Agua</a>
         </div>
       </div>
   </section>        
