--- a/index.html
+++ b/index.html
@@ -19,27 +19,28 @@
        
     </nav>
     <main>
-        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img class="d-block w-100" src="https://images.pexels.com/photos/1310847/pexels-photo-1310847.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="pokeBola">
-              </div>
-              <div class="carousel-item">
-                <img class="d-block w-100" src="https://images.pexels.com/photos/1716861/pexels-photo-1716861.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Pikachu">
-              </div>
-              <div class="carousel-item">
-                <img class="d-block w-100" src="https://images.pexels.com/photos/7824266/pexels-photo-7824266.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="TarjetasPokemon">
-              </div>
-            </div>
-            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
+      <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="img/pokemon-pikachu-slider.jpg" class="d-block w-100" alt="pikachu">
           </div>
+          <div class="carousel-item">
+            <img src="img/bulbasasur-slider.jpg" class="d-block w-100" alt="bulbasaur">
+          </div>
+          <div class="carousel-item">
+            <img src="img/pokebola-slider.jpg" class="d-block w-100" alt="Pokebola">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+        </main>
   <section class="container-fluid row d-flex justify-content-center">
     <div class="card col-sm-12 col-md-6 col-lg-3  m-5" >
         <img src="img/Bulbasaur.png" class="card-img-top" alt="Bulbasaur">
@@ -98,7 +99,7 @@
         </div>
       </div>
   </section>        
-    </main>
+
     <footer class="container-fluid bg-dark">
 <div class="text-light text-center p-5">
  &copy; Todos los derechos reservados
