guardamos el cyndraquil y sus numeros

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
         </main>
   <section class="container-fluid row d-flex justify-content-center">
     <div class="card col-sm-12 col-md-6 col-lg-3  m-5" >
-        <img src="img/Bulbasaur.png" class="card-img-top" alt="Bulbasaur">
+        <img src="img/cyndraquil.png" class="card-img-top" alt="Bulbasaur">
         <div class="card-body">
-          <p class="card-title">#001</p>
+          <p class="card-title">#155</p>
           <h3 class="card-text">Bulbasaur</h3>
           <a href="pages/detalles.html" class="btn btn-success">Planta</a>
         </div>
@@ -61,7 +61,7 @@
     <div class="card col-sm-12 col-md-6 col-lg-3 m-5" >
         <img src="img/Machamps.png" class="card-img-top" alt="machamps">
         <div class="card-body">
-          <p class="card-title">#003</p>
+          <p class="card-title">#090</p>
           <h3 class="card-text">Machamps</h3>
           <a href="pages/detalles.html" class="btn btn-dark">Lucha</a>
         </div>
@@ -69,7 +69,7 @@
     <div class="card col-sm-12 col-md-6 col-lg-3 m-5" >
         <img src="img/Pikachu.png" class="card-img-top" alt="Pikachu">
         <div class="card-body">
-          <p class="card-title">#004</p>
+          <p class="card-title">#074</p>
           <h3 class="card-text">Pikachu</h3>
           <a href="pages/detalles.html" class="btn btn-warning">Electrico</a>
         </div>
@@ -77,7 +77,7 @@
     <div class="card col-sm-12 col-md-6 col-lg-3 m-5" >
         <img src="img/Rayquaza.png" class="card-img-top" alt="Rayquaza">
         <div class="card-body">
-          <p class="card-title">#005</p>
+          <p class="card-title">#190</p>
           <h3 class="card-text">Rayquaza</h3>
           <a href="pages/detalles.html" class="btn btn-dark">Lucha</a>
         </div>
@@ -85,7 +85,7 @@
     <div class="card col-sm-12 col-md-6 col-lg-3 m-5" >
         <img src="img/Rhyhorn.png" class="card-img-top" alt="rhyron">
         <div class="card-body">
-          <p class="card-title">#006</p>
+          <p class="card-title">#210</p>
           <h3 class="card-text">Rhyhorn</h3>
           <a href="pages/detalles.html" class="btn btn-secondary">Piedra</a>
         </div>
