--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
         <img src="img/cyndraquil.png" class="card-img-top" alt="Bulbasaur">
         <div class="card-body">
           <p class="card-title">#155</p>
-          <h3 class="card-text">Bulbasaur</h3>
-          <a href="pages/detalles.html" class="btn btn-success">Planta</a>
+          <h3 class="card-text">Cyndraquil</h3>
+          <p clas="badge bg-danger">Fuego</p>
+          <a href="pages/detalles.html" class="btn btn-primary">Ver detalle </a>
         </div>
       </div>
     <div class="card col-sm-12 col-md-6 col-lg-3  m-5" >
