--- a/index.html
+++ b/index.html
@@ -46,57 +46,64 @@
         <img src="img/cyndraquil.png" class="card-img-top" alt="Bulbasaur">
         <div class="card-body">
           <p class="card-title">#155</p>
-          <h3 class="card-text">Cyndraquil</h3>
-          <p clas="badge bg-danger">Fuego</p>
-          <a href="pages/detalles.html" class="btn btn-primary">Ver detalle </a>
+          <h3 class="card-text fs-2">Cyndraquil</h3>
+          <p class="badge rounded-pill bg-danger fs-5">Fuego</p>
+          <br>
+          <a href="pages/detalles.html" class="btn btn-primary fs-3">Ver detalle </a>
         </div>
       </div>
     <div class="card col-sm-12 col-md-6 col-lg-3  m-5" >
         <img src="img/Charmander.png" class="card-img-top" alt="Charmander">
         <div class="card-body">
           <p class="card-title">#002</p>
-          <h3 class="card-text">Charmander</h3>
-          <a href="pages/detalles.html" class="btn btn-danger">Fuego</a>
+          <h3 class="card-text fs-2">Charmander</h3>
+          <p class="badge rounded-pill bg-danger fs-5">Fuego</p>
+          <a href="pages/detalles.html" class="btn btn-danger fs-3">Ver detalle</a>
         </div>
       </div>
     <div class="card col-sm-12 col-md-6 col-lg-3 m-5" >
         <img src="img/Machamps.png" class="card-img-top" alt="machamps">
         <div class="card-body">
           <p class="card-title">#090</p>
-          <h3 class="card-text">Machamps</h3>
-          <a href="pages/detalles.html" class="btn btn-dark">Lucha</a>
+          <h3 class="card-text fs-2">Machamps</h3>
+          <p class="badge rounded-pill bg-dark fs-5">Lucha</p>
+          <a href="pages/detalles.html" class="btn btn-dark fs-3">Ver detalle</a>
         </div>
       </div>
     <div class="card col-sm-12 col-md-6 col-lg-3 m-5" >
         <img src="img/Pikachu.png" class="card-img-top" alt="Pikachu">
         <div class="card-body">
           <p class="card-title">#074</p>
-          <h3 class="card-text">Pikachu</h3>
-          <a href="pages/detalles.html" class="btn btn-warning">Electrico</a>
+          <h3 class="card-text fs-2">Pikachu</h3>
+          <p class="badge rounded-pill bg-warning fs-5">Electrico</p>
+          <a href="pages/detalles.html" class="btn btn-warning fs-3">Ver detalle</a>
         </div>
     </div>
     <div class="card col-sm-12 col-md-6 col-lg-3 m-5" >
         <img src="img/Rayquaza.png" class="card-img-top" alt="Rayquaza">
         <div class="card-body">
           <p class="card-title">#190</p>
-          <h3 class="card-text">Rayquaza</h3>
-          <a href="pages/detalles.html" class="btn btn-dark">Lucha</a>
+          <h3 class="card-text fs-2">Rayquaza</h3>
+          <p class="badge rounded-pill bg-dark fs-5">Lucha</p>
+          <a href="pages/detalles.html" class="btn btn-dark fs-3">Ver detalle</a>
         </div>
       </div>
     <div class="card col-sm-12 col-md-6 col-lg-3 m-5" >
         <img src="img/Rhyhorn.png" class="card-img-top" alt="rhyron">
         <div class="card-body">
           <p class="card-title">#210</p>
-          <h3 class="card-text">Rhyhorn</h3>
-          <a href="pages/detalles.html" class="btn btn-secondary">Piedra</a>
+          <h3 class="card-text fs-2">Rhyhorn</h3>
+          <p class="badge rounded-pill bg-secondary fs-5">Piedra</p>
+          <a href="pages/detalles.html" class="btn btn-secondary fs-3">Ver detalle</a>
         </div>
       </div>
     <div class="card col-sm-12 col-md-6 col-lg-3 m-3" >
         <img src="img/Squirtle.png" class="card-img-top" alt="squirtle">
         <div class="card-body">
           <p class="card-title">#007</p>
-          <h3 class="card-text">Squirtle</h3>
-          <a href="pages/detalles.html" class="btn btn-primary">Agua</a>
+          <h3 class="card-text fs-2">Squirtle</h3>
+          <p class="badge rounded-pill bg-primary fs-5 Squirtle-color">Agua</p>
+          <a href="pages/detalles.html" class="btn btn-primary fs-3">Ver detalle</a>
         </div>
       </div>
   </section>        
