--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
           <p class="card-title">#002</p>
           <h3 class="card-text fs-2">Charmander</h3>
           <p class="badge rounded-pill bg-danger fs-5">Fuego</p>
-          <a href="pages/detalles.html" class="btn btn-danger fs-3">Ver detalle</a>
+          <br>
+          <a href="#" class="btn btn-primary fs-3">Ver detalle</a>
         </div>
       </div>
     <div class="card col-sm-12 col-md-6 col-lg-3 m-5" >
@@ -67,7 +68,8 @@
           <p class="card-title">#090</p>
           <h3 class="card-text fs-2">Machamps</h3>
           <p class="badge rounded-pill bg-dark fs-5">Lucha</p>
-          <a href="pages/detalles.html" class="btn btn-dark fs-3">Ver detalle</a>
+          <br>
+          <a href="#" class="btn btn-primary fs-3">Ver detalle</a>
         </div>
       </div>
     <div class="card col-sm-12 col-md-6 col-lg-3 m-5" >
@@ -76,7 +78,8 @@
           <p class="card-title">#074</p>
           <h3 class="card-text fs-2">Pikachu</h3>
           <p class="badge rounded-pill bg-warning fs-5">Electrico</p>
-          <a href="pages/detalles.html" class="btn btn-warning fs-3">Ver detalle</a>
+          <br>
+          <a href="#" class="btn btn-primary fs-3">Ver detalle</a>
         </div>
     </div>
     <div class="card col-sm-12 col-md-6 col-lg-3 m-5" >
@@ -85,7 +88,9 @@
           <p class="card-title">#190</p>
           <h3 class="card-text fs-2">Rayquaza</h3>
           <p class="badge rounded-pill bg-dark fs-5">Lucha</p>
-          <a href="pages/detalles.html" class="btn btn-dark fs-3">Ver detalle</a>
+          <p class="badge rounded-pill bg-warning fs-5">Electrico</p>
+          <br>
+          <a href="#" class="btn btn-primary fs-3">Ver detalle</a>
         </div>
       </div>
     <div class="card col-sm-12 col-md-6 col-lg-3 m-5" >
@@ -94,7 +99,8 @@
           <p class="card-title">#210</p>
           <h3 class="card-text fs-2">Rhyhorn</h3>
           <p class="badge rounded-pill bg-secondary fs-5">Piedra</p>
-          <a href="pages/detalles.html" class="btn btn-secondary fs-3">Ver detalle</a>
+          <br>
+          <a href="#" class="btn btn-primary fs-3">Ver detalle</a>
         </div>
       </div>
     <div class="card col-sm-12 col-md-6 col-lg-3 m-3" >
@@ -103,7 +109,8 @@
           <p class="card-title">#007</p>
           <h3 class="card-text fs-2">Squirtle</h3>
           <p class="badge rounded-pill bg-primary fs-5 Squirtle-color">Agua</p>
-          <a href="pages/detalles.html" class="btn btn-primary fs-3">Ver detalle</a>
+          <br>
+          <a href="#" class="btn btn-primary fs-3">Ver detalle</a>
         </div>
       </div>
   </section>        
