cambiamos todos los colores de badges

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <div class="card-body">
           <p class="card-title">#190</p>
           <h3 class="card-text fs-2">Rayquaza</h3>
-          <p class="badge rounded-pill bg-dark fs-5">Lucha</p>
+          <p class="badge rounded-pill bg-success fs-5">Volador</p>
           <p class="badge rounded-pill bg-warning fs-5">Electrico</p>
           <br>
           <a href="#" class="btn btn-primary fs-3">Ver detalle</a>
@@ -99,6 +99,7 @@
           <p class="card-title">#210</p>
           <h3 class="card-text fs-2">Rhyhorn</h3>
           <p class="badge rounded-pill bg-secondary fs-5">Piedra</p>
+          <p class="badge rounded-pill bg-light fs-5 rhyron-color">Tierra</p>
           <br>
           <a href="#" class="btn btn-primary fs-3">Ver detalle</a>
         </div>
