alineamos las cards

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav> 
        
     </nav>
-    <main>
+    <main class="container">
       <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -41,8 +41,8 @@
         </button>
       </div>
         </main>
-  <section class="container-fluid row d-flex justify-content-center">
-    <div class="card col-sm-12 col-md-6 col-lg-3  m-5" >
+  <section class="container row d-flex justify-content-center m-auto">
+    <div class="card col-sm-12 col-md-4 col-lg-3 m-3" >
         <img src="img/cyndraquil.png" class="card-img-top" alt="Bulbasaur">
         <div class="card-body">
           <p class="card-title">#155</p>
@@ -52,7 +52,7 @@
           <a href="pages/detalles.html" class="btn btn-primary fs-3">Ver detalle </a>
         </div>
       </div>
-      <div class="card col-sm-12 col-md-6 col-lg-3 m-5" >
+      <div class="card col-sm-12 col-md-4 col-lg-3 m-3" >
         <img src="img/Machamps.png" class="card-img-top" alt="machamps">
         <div class="card-body">
           <p class="card-title">#090</p>
@@ -62,7 +62,7 @@
           <a href="#" class="btn btn-primary fs-3">Ver detalle</a>
         </div>
       </div>
-    <div class="card col-sm-12 col-md-6 col-lg-3  m-5" >
+    <div class="card col-sm-12 col-md-4 col-lg-3 m-3" >
         <img src="img/Charmander.png" class="card-img-top" alt="Charmander">
         <div class="card-body">
           <p class="card-title">#002</p>
@@ -72,7 +72,7 @@
           <a href="#" class="btn btn-primary fs-3">Ver detalle</a>
         </div>
       </div>
-    <div class="card col-sm-12 col-md-6 col-lg-3 m-5" >
+    <div class="card col-sm-12 col-md-4 col-lg-3 m-3" >
         <img src="img/Pikachu.png" class="card-img-top" alt="Pikachu">
         <div class="card-body">
           <p class="card-title">#074</p>
@@ -82,7 +82,7 @@
           <a href="#" class="btn btn-primary fs-3">Ver detalle</a>
         </div>
     </div>
-    <div class="card col-sm-12 col-md-6 col-lg-3 m-5" >
+    <div class="card col-sm-12 col-md-4 col-lg-3 m-3" >
         <img src="img/Rayquaza.png" class="card-img-top" alt="Rayquaza">
         <div class="card-body">
           <p class="card-title">#190</p>
@@ -93,7 +93,7 @@
           <a href="#" class="btn btn-primary fs-3">Ver detalle</a>
         </div>
       </div>
-    <div class="card col-sm-12 col-md-6 col-lg-3 m-5" >
+    <div class="card col-sm-12 col-md-4 col-lg-3 m-3" >
         <img src="img/Rhyhorn.png" class="card-img-top" alt="rhyron">
         <div class="card-body">
           <p class="card-title">#210</p>
@@ -104,7 +104,7 @@
           <a href="#" class="btn btn-primary fs-3">Ver detalle</a>
         </div>
       </div>
-    <div class="card col-sm-12 col-md-6 col-lg-3 m-3" >
+    <div class="card col-sm-12 col-md-4 col-lg-3 m-3" >
         <img src="img/Squirtle.png" class="card-img-top" alt="squirtle">
         <div class="card-body">
           <p class="card-title">#007</p>
