dejamos el slider como estaba

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav> 
        
     </nav>
-    <main class="container">
+    <main class="container TamañoSlider">
       <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -46,7 +46,7 @@
         <img src="img/cyndraquil.png" class="card-img-top" alt="Bulbasaur">
         <div class="card-body">
           <p class="card-title">#155</p>
-          <h3 class="card-text fs-2">Cyndraquil</h3>
+          <h3 class="card-text fs-2">Cyndaquil</h3>
           <p class="badge rounded-pill bg-danger fs-5">Fuego</p>
           <br>
           <a href="pages/detalles.html" class="btn btn-primary fs-3">Ver detalle </a>
