--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav> 
        
     </nav>
-    <main class="container TamañoSlider">
+    <main class="container">
       <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
