--- a/index.html
+++ b/index.html
@@ -18,87 +18,104 @@
     <nav> 
        
     </nav>
-    <main>
-        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img class="d-block w-100" src="https://images.pexels.com/photos/1310847/pexels-photo-1310847.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="pokeBola">
-              </div>
-              <div class="carousel-item">
-                <img class="d-block w-100" src="https://images.pexels.com/photos/1716861/pexels-photo-1716861.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Pikachu">
-              </div>
-              <div class="carousel-item">
-                <img class="d-block w-100" src="https://images.pexels.com/photos/7824266/pexels-photo-7824266.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="TarjetasPokemon">
-              </div>
-            </div>
-            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
+    <main class="container">
+      <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="img/pokemon-pikachu-slider.jpg" class="d-block w-100" alt="pikachu">
           </div>
-  <section class="container-fluid row d-flex justify-content-center">
-    <div class="card col-sm-12 col-md-6 col-lg-3  m-5" >
-        <img src="img/Bulbasaur.png" class="card-img-top" alt="Bulbasaur">
+          <div class="carousel-item">
+            <img src="img/bulbasasur-slider.jpg" class="d-block w-100" alt="bulbasaur">
+          </div>
+          <div class="carousel-item">
+            <img src="img/pokebola-slider.jpg" class="d-block w-100" alt="Pokebola">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+        </main>
+  <section class="container row d-flex justify-content-center m-auto">
+    <div class="card col-sm-12 col-md-4 col-lg-3 m-3" >
+        <img src="img/cyndraquil.png" class="card-img-top" alt="Bulbasaur">
         <div class="card-body">
-          <p class="card-title">#001</p>
-          <h3 class="card-text">Bulbasaur</h3>
-          <a href="pages/detalles.html" class="btn btn-success">Planta</a>
+          <p class="card-title">#155</p>
+          <h3 class="card-text fs-2">Cyndaquil</h3>
+          <p class="badge rounded-pill bg-danger fs-5">Fuego</p>
+          <br>
+          <a href="pages/detalles.html" class="btn btn-primary fs-3">Ver detalle </a>
         </div>
       </div>
-    <div class="card col-sm-12 col-md-6 col-lg-3  m-5" >
+      <div class="card col-sm-12 col-md-4 col-lg-3 m-3" >
+        <img src="img/Machamps.png" class="card-img-top" alt="machamps">
+        <div class="card-body">
+          <p class="card-title">#090</p>
+          <h3 class="card-text fs-2">Machamps</h3>
+          <p class="badge rounded-pill bg-dark fs-5">Lucha</p>
+          <br>
+          <a href="#" class="btn btn-primary fs-3">Ver detalle</a>
+        </div>
+      </div>
+    <div class="card col-sm-12 col-md-4 col-lg-3 m-3" >
         <img src="img/Charmander.png" class="card-img-top" alt="Charmander">
         <div class="card-body">
           <p class="card-title">#002</p>
-          <h3 class="card-text">Charmander</h3>
-          <a href="pages/detalles.html" class="btn btn-danger">Fuego</a>
+          <h3 class="card-text fs-2">Charmander</h3>
+          <p class="badge rounded-pill bg-danger fs-5">Fuego</p>
+          <br>
+          <a href="#" class="btn btn-primary fs-3">Ver detalle</a>
         </div>
       </div>
-    <div class="card col-sm-12 col-md-6 col-lg-3 m-5" >
-        <img src="img/Machamps.png" class="card-img-top" alt="machamps">
-        <div class="card-body">
-          <p class="card-title">#003</p>
-          <h3 class="card-text">Machamps</h3>
-          <a href="pages/detalles.html" class="btn btn-dark">Lucha</a>
-        </div>
-      </div>
-    <div class="card col-sm-12 col-md-6 col-lg-3 m-5" >
+    <div class="card col-sm-12 col-md-4 col-lg-3 m-3" >
         <img src="img/Pikachu.png" class="card-img-top" alt="Pikachu">
         <div class="card-body">
-          <p class="card-title">#004</p>
-          <h3 class="card-text">Pikachu</h3>
-          <a href="pages/detalles.html" class="btn btn-warning">Electrico</a>
+          <p class="card-title">#074</p>
+          <h3 class="card-text fs-2">Pikachu</h3>
+          <p class="badge rounded-pill bg-warning fs-5">Electrico</p>
+          <br>
+          <a href="#" class="btn btn-primary fs-3">Ver detalle</a>
         </div>
     </div>
-    <div class="card col-sm-12 col-md-6 col-lg-3 m-5" >
+    <div class="card col-sm-12 col-md-4 col-lg-3 m-3" >
         <img src="img/Rayquaza.png" class="card-img-top" alt="Rayquaza">
         <div class="card-body">
-          <p class="card-title">#005</p>
-          <h3 class="card-text">Rayquaza</h3>
-          <a href="pages/detalles.html" class="btn btn-dark">Lucha</a>
+          <p class="card-title">#190</p>
+          <h3 class="card-text fs-2">Rayquaza</h3>
+          <p class="badge rounded-pill bg-success fs-5">Volador</p>
+          <p class="badge rounded-pill bg-warning fs-5">Electrico</p>
+          <br>
+          <a href="#" class="btn btn-primary fs-3">Ver detalle</a>
         </div>
       </div>
-    <div class="card col-sm-12 col-md-6 col-lg-3 m-5" >
+    <div class="card col-sm-12 col-md-4 col-lg-3 m-3" >
         <img src="img/Rhyhorn.png" class="card-img-top" alt="rhyron">
         <div class="card-body">
-          <p class="card-title">#006</p>
-          <h3 class="card-text">Rhyhorn</h3>
-          <a href="pages/detalles.html" class="btn btn-secondary">Piedra</a>
+          <p class="card-title">#210</p>
+          <h3 class="card-text fs-2">Rhyhorn</h3>
+          <p class="badge rounded-pill bg-secondary fs-5">Piedra</p>
+          <p class="badge rounded-pill bg-light fs-5 rhyron-color">Tierra</p>
+          <br>
+          <a href="#" class="btn btn-primary fs-3">Ver detalle</a>
         </div>
       </div>
-    <div class="card col-sm-12 col-md-6 col-lg-3 m-3" >
+    <div class="card col-sm-12 col-md-4 col-lg-3 m-3" >
         <img src="img/Squirtle.png" class="card-img-top" alt="squirtle">
         <div class="card-body">
           <p class="card-title">#007</p>
-          <h3 class="card-text">Squirtle</h3>
-          <a href="pages/detalles.html" class="btn btn-primary">Agua</a>
+          <h3 class="card-text fs-2">Squirtle</h3>
+          <p class="badge rounded-pill bg-primary fs-5 Squirtle-color">Agua</p>
+          <br>
+          <a href="#" class="btn btn-primary fs-3">Ver detalle</a>
         </div>
       </div>
   </section>        
-    </main>
+
     <footer class="container-fluid bg-dark">
 <div class="text-light text-center p-5">
  &copy; Todos los derechos reservados
