--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="CSS/Style.css" />
     <!-- CSS only -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
@@ -11,100 +12,87 @@
       integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="CSS/Style.css">
-    <title>Pokemones</title>
+    <title>Document</title>
   </head>
   <body>
-    <nav> 
-       
-    </nav>
-    <main>
-        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img class="d-block w-100" src="https://images.pexels.com/photos/1310847/pexels-photo-1310847.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="pokeBola">
-              </div>
-              <div class="carousel-item">
-                <img class="d-block w-100" src="https://images.pexels.com/photos/1716861/pexels-photo-1716861.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Pikachu">
-              </div>
-              <div class="carousel-item">
-                <img class="d-block w-100" src="https://images.pexels.com/photos/7824266/pexels-photo-7824266.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="TarjetasPokemon">
-              </div>
-            </div>
-            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
+    <nav>
+      <nav class="navbar navbar-dark navbar-expand-lg bg-danger">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Pokedex</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#"
+                  >Inicio</a
+                >
+              </li>
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="#"
+                  id="navbarDropdown"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  Categorías
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><a class="dropdown-item" href="#">Fuego</a></li>
+                  <li><a class="dropdown-item" href="#">Agua</a></li>
+                  <li><a class="dropdown-item" href="#">Tierra</a></li>
+                </ul>
+              </li>
+            </ul>
+            <form class="d-flex" role="search">
+              <input
+                class="form-control me-2"
+                type="search"
+                placeholder="Buscar un Pokemon"
+                aria-label="Search"
+              />
+              <button class="btn btn color-ligth" type="submit">
+                <svg
+                  class="icono"
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="16"
+                  height="16"
+                  fill="currentColor"
+                  class="bi bi-search"
+                  viewBox="0 0 16 16"
+                >
+                  <path
+                    d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"
+                  />
+                </svg>
+              </button>
+            </form>
           </div>
-  <section class="container-fluid row d-flex justify-content-center">
-    <div class="card col-sm-12 col-md-6 col-lg-3  m-5" >
-        <img src="img/Bulbasaur.png" class="card-img-top" alt="Bulbasaur">
-        <div class="card-body">
-          <p class="card-title">#001</p>
-          <h3 class="card-text">Bulbasaur</h3>
-          <a href="pages/detalles.html" class="btn btn-success">Planta</a>
         </div>
+      </nav>
+    </nav>
+    <main></main>
+    <footer>
+      <div class="footer">
+        <p>&copy; 2021 Todos los derechos reservados</p>
       </div>
-    <div class="card col-sm-12 col-md-6 col-lg-3  m-5" >
-        <img src="img/Charmander.png" class="card-img-top" alt="Charmander">
-        <div class="card-body">
-          <p class="card-title">#002</p>
-          <h3 class="card-text">Charmander</h3>
-          <a href="pages/detalles.html" class="btn btn-danger">Fuego</a>
-        </div>
-      </div>
-    <div class="card col-sm-12 col-md-6 col-lg-3 m-5" >
-        <img src="img/Machamps.png" class="card-img-top" alt="machamps">
-        <div class="card-body">
-          <p class="card-title">#003</p>
-          <h3 class="card-text">Machamps</h3>
-          <a href="pages/detalles.html" class="btn btn-dark">Lucha</a>
-        </div>
-      </div>
-    <div class="card col-sm-12 col-md-6 col-lg-3 m-5" >
-        <img src="img/Pikachu.png" class="card-img-top" alt="Pikachu">
-        <div class="card-body">
-          <p class="card-title">#004</p>
-          <h3 class="card-text">Pikachu</h3>
-          <a href="pages/detalles.html" class="btn btn-warning">Electrico</a>
-        </div>
-    </div>
-    <div class="card col-sm-12 col-md-6 col-lg-3 m-5" >
-        <img src="img/Rayquaza.png" class="card-img-top" alt="Rayquaza">
-        <div class="card-body">
-          <p class="card-title">#005</p>
-          <h3 class="card-text">Rayquaza</h3>
-          <a href="pages/detalles.html" class="btn btn-dark">Lucha</a>
-        </div>
-      </div>
-    <div class="card col-sm-12 col-md-6 col-lg-3 m-5" >
-        <img src="img/Rhyhorn.png" class="card-img-top" alt="rhyron">
-        <div class="card-body">
-          <p class="card-title">#006</p>
-          <h3 class="card-text">Rhyhorn</h3>
-          <a href="pages/detalles.html" class="btn btn-secondary">Piedra</a>
-        </div>
-      </div>
-    <div class="card col-sm-12 col-md-6 col-lg-3 m-3" >
-        <img src="img/Squirtle.png" class="card-img-top" alt="squirtle">
-        <div class="card-body">
-          <p class="card-title">#007</p>
-          <h3 class="card-text">Squirtle</h3>
-          <a href="pages/detalles.html" class="btn btn-primary">Agua</a>
-        </div>
-      </div>
-  </section>        
-    </main>
-    <footer class="container-fluid bg-dark">
-<div class="text-light text-center p-5">
- &copy; Todos los derechos reservados
-</div>
     </footer>
-   <!-- JavaScript Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+    <!-- JavaScript Bundle with Popper -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
