Hice el merge con la rama fara y elimine una etiqueta de mas en index

--- a/index.html
+++ b/index.html
@@ -127,96 +127,91 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
+      <section class="container row d-flex justify-content-center m-auto">
+        <div class="card col-sm-12 col-md-4 col-lg-3 m-3">
+          <img src="img/cyndraquil.png" class="card-img-top" alt="Bulbasaur" />
+          <div class="card-body">
+            <p class="card-title">#155</p>
+            <h3 class="card-text fs-2">Cyndaquil</h3>
+            <p class="badge rounded-pill bg-danger fs-5">Fuego</p>
+            <br />
+            <a href="pages/detalles.html" class="btn btn-primary fs-3"
+              >Ver detalle
+            </a>
+          </div>
+        </div>
+
+        <div class="card col-sm-12 col-md-4 col-lg-3 m-3">
+          <img src="img/Machamps.png" class="card-img-top" alt="machamps" />
+          <div class="card-body">
+            <p class="card-title">#090</p>
+            <h3 class="card-text fs-2">Machamps</h3>
+            <p class="badge rounded-pill bg-dark fs-5">Lucha</p>
+            <br />
+            <a href="#" class="btn btn-primary fs-3">Ver detalle</a>
+          </div>
+        </div>
+        <div class="card col-sm-12 col-md-4 col-lg-3 m-3">
+          <img src="img/Charmander.png" class="card-img-top" alt="Charmander" />
+          <div class="card-body">
+            <p class="card-title">#002</p>
+            <h3 class="card-text fs-2">Charmander</h3>
+            <p class="badge rounded-pill bg-danger fs-5">Fuego</p>
+            <br />
+            <a href="#" class="btn btn-primary fs-3">Ver detalle</a>
+          </div>
+        </div>
+        <div class="card col-sm-12 col-md-4 col-lg-3 m-3">
+          <img src="img/Pikachu.png" class="card-img-top" alt="Pikachu" />
+          <div class="card-body">
+            <p class="card-title">#074</p>
+            <h3 class="card-text fs-2">Pikachu</h3>
+            <p class="badge rounded-pill bg-warning fs-5">Electrico</p>
+            <br />
+            <a href="#" class="btn btn-primary fs-3">Ver detalle</a>
+          </div>
+        </div>
+        <div class="card col-sm-12 col-md-4 col-lg-3 m-3">
+          <img src="img/Rayquaza.png" class="card-img-top" alt="Rayquaza" />
+          <div class="card-body">
+            <p class="card-title">#190</p>
+            <h3 class="card-text fs-2">Rayquaza</h3>
+            <p class="badge rounded-pill bg-success fs-5">Volador</p>
+            <p class="badge rounded-pill bg-warning fs-5">Electrico</p>
+            <br />
+            <a href="#" class="btn btn-primary fs-3">Ver detalle</a>
+          </div>
+        </div>
+        <div class="card col-sm-12 col-md-4 col-lg-3 m-3">
+          <img src="img/Rhyhorn.png" class="card-img-top" alt="rhyron" />
+          <div class="card-body">
+            <p class="card-title">#210</p>
+            <h3 class="card-text fs-2">Rhyhorn</h3>
+            <p class="badge rounded-pill bg-secondary fs-5">Piedra</p>
+            <p class="badge rounded-pill bg-light fs-5 rhyron-color">Tierra</p>
+            <br />
+            <a href="#" class="btn btn-primary fs-3">Ver detalle</a>
+          </div>
+        </div>
+        <div class="card col-sm-12 col-md-4 col-lg-3 m-3">
+          <img src="img/Squirtle.png" class="card-img-top" alt="squirtle" />
+          <div class="card-body">
+            <p class="card-title">#007</p>
+            <h3 class="card-text fs-2">Squirtle</h3>
+            <p class="badge rounded-pill bg-primary fs-5 Squirtle-color">
+              Agua
+            </p>
+            <br />
+            <a href="#" class="btn btn-primary fs-3">Ver detalle</a>
+          </div>
+        </div>
+      </section>
     </main>
-    <section class="container row d-flex justify-content-center m-auto">
-      <div class="card col-sm-12 col-md-4 col-lg-3 m-3">
-        <img src="img/cyndraquil.png" class="card-img-top" alt="Bulbasaur" />
-        <div class="card-body">
-          <p class="card-title">#155</p>
-          <h3 class="card-text fs-2">Cyndaquil</h3>
-          <p class="badge rounded-pill bg-danger fs-5">Fuego</p>
-          <br />
-          <a href="pages/detalles.html" class="btn btn-primary fs-3"
-            >Ver detalle
-          </a>
-        </div>
-      </div>
-
-      <div class="card col-sm-12 col-md-4 col-lg-3 m-3">
-        <img src="img/Machamps.png" class="card-img-top" alt="machamps" />
-        <div class="card-body">
-          <p class="card-title">#090</p>
-          <h3 class="card-text fs-2">Machamps</h3>
-          <p class="badge rounded-pill bg-dark fs-5">Lucha</p>
-          <br />
-          <a href="#" class="btn btn-primary fs-3">Ver detalle</a>
-        </div>
-      </div>
-      <div class="card col-sm-12 col-md-4 col-lg-3 m-3">
-        <img src="img/Charmander.png" class="card-img-top" alt="Charmander" />
-        <div class="card-body">
-          <p class="card-title">#002</p>
-          <h3 class="card-text fs-2">Charmander</h3>
-          <p class="badge rounded-pill bg-danger fs-5">Fuego</p>
-          <br />
-          <a href="#" class="btn btn-primary fs-3">Ver detalle</a>
-        </div>
-      </div>
-      <div class="card col-sm-12 col-md-4 col-lg-3 m-3">
-        <img src="img/Pikachu.png" class="card-img-top" alt="Pikachu" />
-        <div class="card-body">
-          <p class="card-title">#074</p>
-          <h3 class="card-text fs-2">Pikachu</h3>
-          <p class="badge rounded-pill bg-warning fs-5">Electrico</p>
-          <br />
-          <a href="#" class="btn btn-primary fs-3">Ver detalle</a>
-        </div>
-      </div>
-      <div class="card col-sm-12 col-md-4 col-lg-3 m-3">
-        <img src="img/Rayquaza.png" class="card-img-top" alt="Rayquaza" />
-        <div class="card-body">
-          <p class="card-title">#190</p>
-          <h3 class="card-text fs-2">Rayquaza</h3>
-          <p class="badge rounded-pill bg-success fs-5">Volador</p>
-          <p class="badge rounded-pill bg-warning fs-5">Electrico</p>
-          <br />
-          <a href="#" class="btn btn-primary fs-3">Ver detalle</a>
-        </div>
-      </div>
-      <div class="card col-sm-12 col-md-4 col-lg-3 m-3">
-        <img src="img/Rhyhorn.png" class="card-img-top" alt="rhyron" />
-        <div class="card-body">
-          <p class="card-title">#210</p>
-          <h3 class="card-text fs-2">Rhyhorn</h3>
-          <p class="badge rounded-pill bg-secondary fs-5">Piedra</p>
-          <p class="badge rounded-pill bg-light fs-5 rhyron-color">Tierra</p>
-          <br />
-          <a href="#" class="btn btn-primary fs-3">Ver detalle</a>
-        </div>
-      </div>
-      <div class="card col-sm-12 col-md-4 col-lg-3 m-3">
-        <img src="img/Squirtle.png" class="card-img-top" alt="squirtle" />
-        <div class="card-body">
-          <p class="card-title">#007</p>
-          <h3 class="card-text fs-2">Squirtle</h3>
-          <p class="badge rounded-pill bg-primary fs-5 Squirtle-color">Agua</p>
-          <br />
-          <a href="#" class="btn btn-primary fs-3">Ver detalle</a>
-        </div>
-      </div>
-    </section>
-
     <footer>
       <div class="footer">
         <p class="m-0">&copy; 2021 Todos los derechos reservados</p>
       </div>
     </footer>
-    <!-- JavaScript Bundle with Popper -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
-      crossorigin="anonymous"
-    ></script>
 
     <!-- JavaScript Bundle with Popper -->
     <script
