--- a/pages/detalles.html
+++ b/pages/detalles.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="CSS/Style.css" />
+  <link rel="stylesheet" href="../CSS/Style.css" />
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous" />
@@ -13,8 +13,117 @@
 </head>
 
 <body>
-  <nav></nav>
-  <main>
+  <nav class="navbar navbar-dark navbar-expand-lg bg-danger">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Pokedex</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle"
+              href="#"
+              id="navbarDropdown"
+              role="button"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+            >
+              Categorías
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="#">Fuego</a></li>
+              <li><a class="dropdown-item" href="#">Agua</a></li>
+              <li><a class="dropdown-item" href="#">Tierra</a></li>
+            </ul>
+          </li>
+        </ul>
+        <form class="d-flex" role="search">
+          <input
+            class="form-control me-2"
+            type="search"
+            placeholder="Buscar un Pokemon"
+            aria-label="Search"
+          />
+          <button class="btn btn color-ligth" type="submit">
+            <svg
+              class="icono"
+              xmlns="http://www.w3.org/2000/svg"
+              width="16"
+              height="16"
+              fill="currentColor"
+              class="bi bi-search"
+              viewBox="0 0 16 16"
+            >
+              <path
+                d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"
+              />
+            </svg>
+          </button>
+        </form>
+      </div>
+    </div>
+  </nav>
+  <main class="container mt-4">
+    <div
+        id="carouselExampleControls"
+        class="carousel slide"
+        data-bs-ride="carousel"
+      >
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img
+              src="../img/pokemon-pikachu-slider.jpg"
+              class="d-block w-100"
+              alt="pikachu"
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              src="../img/bulbasasur-slider.jpg"
+              class="d-block w-100"
+              alt="bulbasaur"
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              src="../img/pokebola-slider.jpg"
+              class="d-block w-100"
+              alt="Pokebola"
+            />
+          </div>
+        </div>
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#carouselExampleControls"
+          data-bs-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#carouselExampleControls"
+          data-bs-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
     <div class="container border rounded-4 my-4">
       <h1 class="text-center">Cyndaquil N.º155</h1>
       <section class="row">
@@ -37,7 +146,7 @@
                 <p>Altura<br>0,5m</p>
               </aside>
               <aside class="col-12 col-md-6">
-                <p>Categoria<br>Raton fuego</span></p>
+                <p>Categoria<br>Raton fuego</p>
               </aside>
               <aside class="col-12 col-md-6">
                 <p>Peso<br>7,9 kg</p>
@@ -46,7 +155,7 @@
                 <p>Habilidad<br>Mar llamas</p>
               </aside>
               <aside class="col-12 col-md-6">
-                <p> &#9794 &#9792</p>
+                <p>♂ ♀</p>
               </aside>
             </div>
           </div>
@@ -86,7 +195,9 @@
     </section>
   </main>
   <footer>
-
+    <div class="footer">
+      <p class="m-0">&copy; 2021 Todos los derechos reservados</p>
+    </div>
   </footer>
   <!-- JavaScript Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
