Puse los links correctos para los elementos del navbar y cambie la etiqueta title en el header

--- a/pages/detalles.html
+++ b/pages/detalles.html
@@ -9,13 +9,13 @@
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous" />
-  <title>Document</title>
+  <title>Cyndaquil</title>
 </head>
 
 <body>
   <nav class="navbar navbar-dark navbar-expand-lg bg-danger">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Pokedex</a>
+      <a class="navbar-brand" href="../index.html">Pokedex</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -30,7 +30,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+            <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
           </li>
           <li class="nav-item dropdown">
             <a
@@ -130,7 +130,7 @@
         <article class="col-12 col-lg-5">
           <img class="w-100" src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/155.png" alt="Cyndaquil" />
         </article>
-        <article class="col-12 col-lg-7 my-5">
+        <article class="col-12 col-lg-6 my-5">
           <p>
             Cyndaquil se protege soltando llamas por el lomo. Cuando está
             enfadado, las llamas son fieras, pero, si está cansado, solo
