guardamos los badges con color y acomodamos el slider con respecto a los pixeles

--- a/pages/detalles.html
+++ b/pages/detalles.html
@@ -86,21 +86,21 @@
           <div class="carousel-item active">
             <img
               src="../img/pokemon-pikachu-slider.jpg"
-              class="d-block w-100"
+              class="d-block w-100 img-slider"
               alt="pikachu"
             />
           </div>
           <div class="carousel-item">
             <img
               src="../img/bulbasasur-slider.jpg"
-              class="d-block w-100"
+              class="d-block w-100 img-slider"
               alt="bulbasaur"
             />
           </div>
           <div class="carousel-item">
             <img
               src="../img/pokebola-slider.jpg"
-              class="d-block w-100"
+              class="d-block w-100 img-slider"
               alt="Pokebola"
             />
           </div>
