--- a/index.html
+++ b/index.html
@@ -89,21 +89,21 @@
           <div class="carousel-item active">
             <img
               src="img/pokemon-pikachu-slider.jpg"
-              class="d-block w-100"
+              class="d-block w-100 img-slider"
               alt="pikachu"
             />
           </div>
           <div class="carousel-item">
             <img
               src="img/bulbasasur-slider.jpg"
-              class="d-block w-100"
+              class="d-block w-100 img-slider"
               alt="bulbasaur"
             />
           </div>
           <div class="carousel-item">
             <img
               src="img/pokebola-slider.jpg"
-              class="d-block w-100"
+              class="d-block w-100 img-slider"
               alt="Pokebola"
             />
           </div>
@@ -134,6 +134,7 @@
             <p class="card-title">#155</p>
             <h3 class="card-text fs-2">Cyndaquil</h3>
             <p class="badge rounded-pill bg-danger fs-5">Fuego</p>
+
             <br />
             <a href="pages/detalles.html" class="btn btn-primary fs-3"
               >Ver detalle
@@ -188,7 +189,7 @@
             <p class="card-title">#210</p>
             <h3 class="card-text fs-2">Rhyhorn</h3>
             <p class="badge rounded-pill bg-secondary fs-5">Piedra</p>
-            <p class="badge rounded-pill bg-light fs-5 rhyron-color">Tierra</p>
+            <p class="badge rounded-pill fs-5 rhyron-color">Tierra</p>
             <br />
             <a href="#" class="btn btn-primary fs-3">Ver detalle</a>
           </div>
